# vibe

./: .gitignore  .prettierrc  CLAUDE.md  README.md  claude.json  claude.py  claude_desktop.sh  codex.py  eslint.config.js  gemini.py  gemini.sh  generate-mcp-config.sh  main.py  mcp-settings.json  package-lock.json  package.json  pyproject.toml  settings.json  tsconfig.json
.claude/: settings.local.json
src/: config.ts  deployment.ts  index.ts  interactive.ts  utils.ts
vibe/: __init__.py  cli.py  core.py
